css/style.css
/* ... */
.head #menu-expand {
  display: none;
}

.head #menu-expand.active {
  pointer-events: none;
  /* 防止在动画期间再次点击 */
}

.head #menu-expand.active + #menu-panel {
  left: 40px;
}

.head #menu-expand > .menu-icon {
  transition: transform .5s;
}

.head #menu-expand .active #menu-expand > .menu-icon {
  transform: rotate(45deg);
}

@keyframes goOut {
  0% {
    left: 40px;
  }
  100% {
    left: 100vw;
  }
}

.head .menu {
  display: flex;
  gap: 12px;
}

.head .menu li {
  --circle-size: 100px;
  border-radius: 9999px;
  padding: 6px 16px;
  cursor: pointer;
  background-color: #1F1F26;
  transition: .3s background ease-in-out;
}

.head .menu li.nav, .head .menu li.nav::before {
  background-color: #6361DC;
}

.head .menu .skin {
  width: 14px;
  padding: 6px 13px;
}

.head #menu-panel {
  width: calc(100vw - 80px);
  position: absolute;
  top: 44px;
  left: 100vw;
  padding: 16px 24px;
  background: rgba(25, 25, 32, 0.96);
  backdrop-filter: blur(4px);
  border-radius: 6px;
  box-shadow: 0px 0px 8px 0px rgba(10, 10, 14, 0.4);
  z-index: 101;
}

.head #menu-panel .menu-panel-content {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  justify-content: flex-end;
  gap: 16px;
}

.head #menu-panel .menu-panel-content li {
  --circle-size: 100px;
  border-radius: 9999px;
  padding: 6px 16px;
  cursor: pointer;
  background-color: #1F1F26;
  transition: .3s background ease-in-out;
}

.head #menu-panel .menu-panel-content li.nav, .head #menu-panel .menu-panel-content li.nav::before {
  background-color: #6361DC;
}

.head blockquote {
  position: absolute;
  inset: calc(20px + var(--height)) 0 0;
  font-size: 0;
  width: 100%;
  display: flex;
  align-items: flex-end;
  justify-content: center;
}

.head blockquote::after {
  content: '';
  position: absolute;
  bottom: 0;
  left: 0;
  right: 0;
  height: 20px;
  background: url("../assets/public/head_bottom_line.svg") no-repeat center top;
  z-index: -1;
}

.head blockquote img {
  margin-bottom: 10px;
  animation: rotate 6s linear infinite;
}

@keyframes rotate {
  0% {
    transform: rotate(0deg);
  }
  100% {
    transform: rotate(360deg);
  }
}

.footer {
  padding: 60px 40px 20px 40px;
  font-size: 12px;
  line-height: 20px;
  color: #62616F;
}

.footer .copyright {
  display: flex;
  justify-content: center;
  align-items: center;
  --mw: 968px;
  gap: 12px;
}

.footer .copyright .main {
  width: 100%;
  display: flex;
  justify-content: space-between;
  align-items: center;
  max-width: var(--mw);
}

.footer .copyright a {
  transition: color .15s ease-in;
  color: #62616F;
}

.footer .copyright a:hover {
  color: #6361DC;
}

.footer .copyright .friends {
  display: flex;
  justify-content: center;
  align-items: center;
  --mw: 968px;
  gap: 8px;
}

.footer .copyright .friends .main {
  width: 100%;
  display: flex;
  justify-content: space-between;
  align-items: center;
  max-width: var(--mw);
}

.widget {
  display: flex;
  justify-content: center;
  align-items: center;
  --mw: 968px;
}

.widget .main {
  width: 100%;
  display: flex;
  justify-content: space-between;
  align-items: center;
  max-width: var(--mw);
}

.widget .shape-light {
  z-index: -99;
  position: fixed;
  bottom: -180px;
  width: 600px;
  height: 200px;
  border-radius: 9999px;
  background: rgba(99, 97, 220, 0.4);
  filter: blur(100px);
}

.widget .shape-star {
  position: fixed;
  z-index: -98;
  bottom: 0;
  height: 150px;
  width: var(--mw);
  -webkit-mask-image: linear-gradient(180deg, rgba(217, 217, 217, 0) 0%, rgba(217, 217, 217, 0.8) 25%, #d9d9d9 50%, rgba(217, 217, 217, 0.8) 75%, rgba(217, 217, 217, 0) 100%);
  mask-image: linear-gradient(180deg, rgba(217, 217, 217, 0) 0%, rgba(217, 217, 217, 0.8) 25%, #d9d9d9 50%, rgba(217, 217, 217, 0.8) 75%, rgba(217, 217, 217, 0) 100%);
  -webkit-mask-size: cover;
  mask-size: cover;
}

@keyframes risingStarsAnination {
  0% {
    transform: translateZ(0) translateY(0);
  }
  to {
    transform: translateZ(0) translateY(-2000px);
  }
}

.widget .shape-star .rising-stars {
  opacity: .7;
  pointer-events: none;
}

.widget .shape-star .rising-stars div {
  background: transparent;
  border-radius: 50%;
}
/* ... */

